# DSA-practice

./: .gitignore  README.md  ai_coach_view.py  app.py  dashboard_view.py  generator.py  helpers.py  init_all.py  initialize_all.py  patch.py  pyproject.toml  questions_db.py  sandbox_view.py  styles.py  update_solutions.py
.streamlit/: config.toml
01_DSA/: README.md
01_DSA/arrays_and_hashing/: README.md  q01_test.py  q01_two_sum.py  q01_two_sum_test.py  q02_contains_duplicate_test.py  q04_group_anagrams.py  q04_group_anagrams_test.py  q05_top_k_frequent_elements.py  q06_product_of_array_except_self_test.py
01_DSA/binary_search/: README.md  q01_binary_search_test.py  q02_search_a_2d_matrix.py  q03_koko_eating_bananas.py  q03_koko_eating_bananas_test.py  q04_find_minimum_in_rotated_sorted_array.py  q04_find_minimum_in_rotated_sorted_array_test.py  q05_search_in_rotated_sorted_array.py
01_DSA/dynamic_programming/: README.md  q01_climbing_stairs.py  q01_climbing_stairs_test.py  q02_min_cost_climbing_test.py  q04_house_robber_ii.py  q04_house_robber_ii_test.py  q05_longest_palindromic_substring.py  q05_longest_palindromic_substring_test.py  q07_coin_change_test.py  q08_longest_increasing_subsequence_test.py  q09_partition_subset_sum.py  q09_partition_subset_sum_test.py
01_DSA/graphs/: README.md  q01_number_of_islands.py  q03_max_area.py  q03_max_area_test.py  q04_pacific_atlantic.py  q05_surrounded_regions.py  q05_surrounded_regions_test.py  q07_course_schedule.py  (+2 more)
02_Data_Science_ML/: README.md
03_LLD/: README.md
04_HLD/: README.md
scratch/: test_gemini.py
(+762 files in other folders)
